--- a/files/en-us/web/html/element/input/date/index.html
+++ b/files/en-us/web/html/element/input/date/index.html
@@ -16,7 +16,7 @@ browser-compat: html.elements.input.input-date
 ---
 <div>{{HTMLRef}}</div>
 
-<p><span class="seoSummary">{{HTMLElement("input")}} elements of <strong><code>type="date"</code></strong> create input fields that let the user enter a date, either with a textbox that validates the input or a special date picker interface.</span></p>
+<p>{{HTMLElement("input")}} elements of <strong><code>type="date"</code></strong> create input fields that let the user enter a date, either with a textbox that validates the input or a special date picker interface.</p>
 
 <p>The resulting value includes the year, month, and day, but <em>not</em> the time. The {{HTMLElement("input/time", "time")}} and {{HTMLElement("input/datetime-local", "datetime-local")}} input types support time and date+time input.</p>
 
