--- a/files/en-us/web/html/element/input/email/index.html
+++ b/files/en-us/web/html/element/input/email/index.html
@@ -12,7 +12,7 @@ browser-compat: html.elements.input.input-email
 ---
 <div>{{HTMLRef}}</div>
 
-<p><span class="seoSummary">{{HTMLElement("input")}} elements of type <code><strong>email</strong></code> are used to let the user enter and edit an e-mail address, or, if the <code><a href="/en-US/docs/Web/HTML/Attributes/multiple">multiple</a></code> attribute is specified, a list of e-mail addresses.</span></p>
+<p>{{HTMLElement("input")}} elements of type <code><strong>email</strong></code> are used to let the user enter and edit an e-mail address, or, if the <code><a href="/en-US/docs/Web/HTML/Attributes/multiple">multiple</a></code> attribute is specified, a list of e-mail addresses.</p>
 
 <div>{{EmbedInteractiveExample("pages/tabbed/input-email.html", "tabbed-shorter")}}</div>
 
