--- a/files/en-us/web/html/element/input/hidden/index.html
+++ b/files/en-us/web/html/element/input/hidden/index.html
@@ -14,7 +14,7 @@ browser-compat: html.elements.input.input-hidden
 ---
 <div>{{HTMLRef}}</div>
 
-<p><span class="seoSummary">{{HTMLElement("input")}} elements of type <strong><code>hidden</code></strong> let web developers include data that cannot be seen or modified by users when a form is submitted. For example, the ID of the content that is currently being ordered or edited, or a unique security token. Hidden inputs are completely invisible in the rendered page, and there is no way to make it visible in the page's content.</span></p>
+<p>{{HTMLElement("input")}} elements of type <strong><code>hidden</code></strong> let web developers include data that cannot be seen or modified by users when a form is submitted. For example, the ID of the content that is currently being ordered or edited, or a unique security token. Hidden inputs are completely invisible in the rendered page, and there is no way to make it visible in the page's content.</p>
 
 <div class="note">
 <p><strong>Note</strong>: There is a live example below the following line of code — if it is working correctly, you should see nothing!</p>
