--- a/files/en-us/web/html/element/input/password/index.html
+++ b/files/en-us/web/html/element/input/password/index.html
@@ -18,7 +18,9 @@ browser-compat: html.elements.input.input-password
 ---
 <div>{{HTMLRef("Input_types")}}</div>
 
-<p><span class="seoSummary"><code>&lt;input&gt;</code> elements of type <strong><code>password</code></strong> provide a way for the user to securely enter a password.</span> The element is presented as a one-line plain text editor control in which the text is obscured so that it cannot be read, usually by replacing each character with a symbol such as the asterisk ("*") or a dot ("•"). This character will vary depending on the {{Glossary("user agent")}} and {{Glossary("OS")}}.</p>
+<p><code>&lt;input&gt;</code> elements of type <strong><code>password</code></strong> provide a way for the user to securely enter a password.</p>
+
+<p>The element is presented as a one-line plain text editor control in which the text is obscured so that it cannot be read, usually by replacing each character with a symbol such as the asterisk ("*") or a dot ("•"). This character will vary depending on the {{Glossary("user agent")}} and {{Glossary("OS")}}.</p>
 
 <div>{{EmbedInteractiveExample("pages/tabbed/input-password.html", "tabbed-standard")}}</div>
 
