--- a/files/en-us/web/html/element/input/reset/index.html
+++ b/files/en-us/web/html/element/input/reset/index.html
@@ -17,7 +17,7 @@ browser-compat: html.elements.input.input-reset
 ---
 <div>{{HTMLRef("Input_types")}}</div>
 
-<p><span class="seoSummary">{{HTMLElement("input")}} elements of type <strong><code>reset</code></strong> are rendered as buttons, with a default {{event("click")}} event handler that resets all of the inputs in the form to their initial values.</span></p>
+<p>{{HTMLElement("input")}} elements of type <strong><code>reset</code></strong> are rendered as buttons, with a default {{event("click")}} event handler that resets all of the inputs in the form to their initial values.</p>
 
 <div>{{EmbedInteractiveExample("pages/tabbed/input-reset.html", "tabbed-standard")}}</div>
 
