--- a/files/en-us/web/html/global_attributes/class/index.html
+++ b/files/en-us/web/html/global_attributes/class/index.html
@@ -9,7 +9,7 @@ browser-compat: html.global_attributes.class
 ---
 <div>{{HTMLSidebar("Global_attributes")}}</div>
 
-<p><span class="seoSummary">The <code><strong>class</strong></code> <a href="/en-US/docs/Web/HTML/Global_attributes">global attribute</a> is a space-separated list of the case-sensitive classes of the element. Classes allow CSS and Javascript to select and access specific elements via the <a href="/en-US/docs/Web/CSS/Class_selectors">class selectors</a> or functions like the DOM method {{domxref("document.getElementsByClassName")}}.</span></p>
+<p>The <code><strong>class</strong></code> <a href="/en-US/docs/Web/HTML/Global_attributes">global attribute</a> is a space-separated list of the case-sensitive classes of the element. Classes allow CSS and Javascript to select and access specific elements via the <a href="/en-US/docs/Web/CSS/Class_selectors">class selectors</a> or functions like the DOM method {{domxref("document.getElementsByClassName")}}.</p>
 
 <div>{{EmbedInteractiveExample("pages/tabbed/attribute-class.html","tabbed-standard")}}</div>
 
