--- a/files/en-us/web/html/global_attributes/hidden/index.html
+++ b/files/en-us/web/html/global_attributes/hidden/index.html
@@ -9,7 +9,7 @@ browser-compat: html.global_attributes.hidden
 ---
 <div>{{HTMLSidebar("Global_attributes")}}</div>
 
-<p><span class="seoSummary">The <strong><code>hidden</code></strong> <a href="/en-US/docs/Web/HTML/Global_attributes">global attribute</a> is a Boolean attribute indicating that the element is not yet, or is no longer, <em>relevant</em>. For example, it can be used to hide elements of the page that can't be used until the login process has been completed.</span> Browsers won't render elements with the <code>hidden</code> attribute set.</p>
+<p>The <strong><code>hidden</code></strong> <a href="/en-US/docs/Web/HTML/Global_attributes">global attribute</a> is a Boolean attribute indicating that the element is not yet, or is no longer, <em>relevant</em>. For example, it can be used to hide elements of the page that can't be used until the login process has been completed. Browsers won't render elements with the <code>hidden</code> attribute set.</p>
 
 <div>{{EmbedInteractiveExample("pages/tabbed/attribute-hidden.html","tabbed-shorter")}}</div>
 
