--- a/files/en-us/web/html/global_attributes/tabindex/index.html
+++ b/files/en-us/web/html/global_attributes/tabindex/index.html
@@ -9,7 +9,7 @@ browser-compat: html.global_attributes.tabindex
 ---
 <div>{{HTMLSidebar("Global_attributes")}}</div>
 
-<p><span class="seoSummary">The <strong><code>tabindex</code></strong> <a href="/en-US/docs/Web/HTML/Global_attributes">global attribute</a> indicates that its element can be focused, and where it participates in sequential keyboard navigation (usually with the <kbd>Tab</kbd> key, hence the name).</span></p>
+<p>The <strong><code>tabindex</code></strong> <a href="/en-US/docs/Web/HTML/Global_attributes">global attribute</a> indicates that its element can be focused, and where it participates in sequential keyboard navigation (usually with the <kbd>Tab</kbd> key, hence the name).</p>
 
 <div>{{EmbedInteractiveExample("pages/tabbed/attribute-tabindex.html","tabbed-standard")}}</div>
 
