--- a/files/en-us/web/html/global_attributes/title/index.html
+++ b/files/en-us/web/html/global_attributes/title/index.html
@@ -10,7 +10,7 @@ browser-compat: html.global_attributes.title
 ---
 <div>{{HTMLSidebar("Global_attributes")}}</div>
 
-<p><span class="seoSummary">The <strong><code>title</code></strong> <a href="/en-US/docs/Web/HTML/Global_attributes">global attribute</a> contains text representing advisory information related to the element it belongs to.</span></p>
+<p>The <strong><code>title</code></strong> <a href="/en-US/docs/Web/HTML/Global_attributes">global attribute</a> contains text representing advisory information related to the element it belongs to.</p>
 
 <div>{{EmbedInteractiveExample("pages/tabbed/attribute-title.html","tabbed-shorter")}}</div>
 
