--- a/files/en-us/web/html/cors_enabled_image/index.html
+++ b/files/en-us/web/html/cors_enabled_image/index.html
@@ -12,7 +12,7 @@ tags:
   - Storage
   - data
 ---
-<p><span class="seoSummary">HTML provides a {{ htmlattrxref("crossorigin", "img") }} attribute for images that, in combination with an appropriate {{Glossary("CORS")}} header, allows images defined by the {{ HTMLElement("img") }} element that are loaded from foreign origins to be used in a {{HTMLElement("canvas")}} as if they had been loaded from the current origin.</span></p>
+<p>HTML provides a {{ htmlattrxref("crossorigin", "img") }} attribute for images that, in combination with an appropriate {{Glossary("CORS")}} header, allows images defined by the {{ HTMLElement("img") }} element that are loaded from foreign origins to be used in a {{HTMLElement("canvas")}} as if they had been loaded from the current origin.</p>
 
 <p>See <a href="/en-US/docs/Web/HTML/Attributes/crossorigin">CORS settings attributes</a> for details on how the <code>crossorigin</code> attribute is used.</p>
 
