--- a/files/en-us/web/html/date_and_time_formats/index.html
+++ b/files/en-us/web/html/date_and_time_formats/index.html
@@ -22,7 +22,9 @@ tags:
 ---
 <div>{{HTMLRef}}</div>
 
-<p><span class="seoSummary">Certain HTML elements use date and/or time values. The formats of the strings that specify these values are described in this article.</span> Elements that use such formats include certain forms of the {{HTMLElement("input")}} element that let the user choose or specify a date, time, or both, as well as the {{HTMLElement("ins")}} and {{HTMLElement("del")}} elements, whose {{htmlattrxref("datetime", "ins")}} attribute specifies the date or date and time at which the insertion or deletion of content occurred.</p>
+<p>Certain HTML elements use date and/or time values. The formats of the strings that specify these values are described in this article.</p>
+
+<p>Elements that use such formats include certain forms of the {{HTMLElement("input")}} element that let the user choose or specify a date, time, or both, as well as the {{HTMLElement("ins")}} and {{HTMLElement("del")}} elements, whose {{htmlattrxref("datetime", "ins")}} attribute specifies the date or date and time at which the insertion or deletion of content occurred.</p>
 
 <p>For <code>&lt;input&gt;</code>, the values of {{htmlattrxref("type", "input")}} that return a {{htmlattrxref("value")}} which contains a string representing a date and/or time are:</p>
 
