--- a/files/en-us/web/html/element/a/index.html
+++ b/files/en-us/web/html/element/a/index.html
@@ -17,7 +17,9 @@ browser-compat: html.elements.a
 ---
 <div>{{HTMLRef}}</div>
 
-<p><span class="seoSummary">The <strong><code>&lt;a&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element (or <em>anchor</em> element), with <a href="#href">its <code>href</code> attribute</a>, creates a hyperlink to web pages, files, email addresses, locations in the same page, or anything else a URL can address.</span> Content within each <code>&lt;a&gt;</code> <strong>should</strong> indicate the link's destination. If <span class="seoSummary"><a href="#href">the <code>href</code> attribute</a></span> is present, pressing the enter key while focused on the <code>&lt;a&gt;</code> element will activate it.</p>
+<p>The <strong><code>&lt;a&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element (or <em>anchor</em> element), with <a href="#href">its <code>href</code> attribute</a>, creates a hyperlink to web pages, files, email addresses, locations in the same page, or anything else a URL can address.</p>
+
+<p>Content within each <code>&lt;a&gt;</code> <strong>should</strong> indicate the link's destination. If the <code>href</code> attribute is present, pressing the enter key while focused on the <code>&lt;a&gt;</code> element will activate it.</p>
 
 <div>{{EmbedInteractiveExample("pages/tabbed/a.html")}}</div>
 
@@ -419,7 +421,7 @@ document.querySelector('a').addEventListener('click', event =&gt;
   &lt;/header&gt;
 
   &lt;main id="content"&gt; &lt;/main&gt; &lt;!-- The skip link jumps to here --&gt;
-  
+
 &lt;/body&gt;
 </pre>
 
