--- a/files/en-us/web/html/global_attributes/x-ms-acceleratorkey/index.html
+++ b/files/en-us/web/html/global_attributes/x-ms-acceleratorkey/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <div>{{HTMLSidebar("Global_attributes")}}{{Non-standard_Header}}</div>
 
-<p><span class="seoSummary">The <code><strong>x-ms-acceleratorkey</strong></code> attribute accessibly declares that an <a href="https://docs.microsoft.com/en-us/windows/uwp/design/input/keyboard-accelerators">accelerator key</a> has been assigned to an element: the element is activated via JavaScript when the key(s) are pressed on a keyboard.</span></p>
+<p>The <code><strong>x-ms-acceleratorkey</strong></code> attribute accessibly declares that an <a href="https://docs.microsoft.com/en-us/windows/uwp/design/input/keyboard-accelerators">accelerator key</a> has been assigned to an element: the element is activated via JavaScript when the key(s) are pressed on a keyboard.</p>
 
 <p>{{Non-standard_Inline}} This proprietary property is specific to Internet Explorer and Microsoft Edge.</p>
 
