Remove style attribute from HTML docs

--- a/files/en-us/web/html/element/img/index.html
+++ b/files/en-us/web/html/element/img/index.html
@@ -219,15 +219,15 @@ browser-compat: html.elements.img
 	<dd>
 	<dl>
 		<dt><code>top</code></dt>
-		<dd>Equivalent to <code style="white-space: nowrap;">vertical-align: top</code> or <code style="white-space: nowrap;">vertical-align: text-top</code></dd>
+		<dd>Equivalent to <code>vertical-align: top</code> or <code>vertical-align: text-top</code></dd>
 		<dt><code>middle</code></dt>
-		<dd>Equivalent to <code style="white-space: nowrap;">vertical-align: -moz-middle-with-baseline</code></dd>
+		<dd>Equivalent to <code>vertical-align: -moz-middle-with-baseline</code></dd>
 		<dt><code>bottom</code></dt>
-		<dd>The default, equivalent to <code style="white-space: nowrap;">vertical-align: unset</code> or <code style="white-space: nowrap;">vertical-align: initial</code></dd>
+		<dd>The default, equivalent to <code>vertical-align: unset</code> or <code>vertical-align: initial</code></dd>
 		<dt><code>left</code></dt>
-		<dd>Equivalent to <code style="white-space: nowrap;">float: left</code></dd>
+		<dd>Equivalent to <code>float: left</code></dd>
 		<dt><code>right</code></dt>
-		<dd>Equivalent to <code style="white-space: nowrap;">float: right</code></dd>
+		<dd>Equivalent to <code>float: right</code></dd>
 	</dl>
 	</dd>
 	<dt>{{htmlattrdef("border")}} {{deprecated_inline}}</dt>
