--- a/files/en-us/web/html/element/button/index.html
+++ b/files/en-us/web/html/element/button/index.html
@@ -211,28 +211,28 @@ browser-compat: html.elements.button
  <tbody>
   <tr>
    <th>Firefox</th>
-   <td class="bc-supports-yes">Yes - Firefox 30.0</td>
-   <td class="bc-supports-no">No (even with a <code>tabindex</code>) Firefox 63</td>
+   <td>✅ Yes - Firefox 30.0</td>
+   <td>❌ No (even with a <code>tabindex</code>) Firefox 63</td>
   </tr>
   <tr>
    <th>Chrome</th>
-   <td class="bc-supports-yes">Yes - Chrome 35</td>
-   <td class="bc-supports-yes">Yes - Chrome 65</td>
+   <td>✅ Yes - Chrome 35</td>
+   <td>✅ Yes - Chrome 65</td>
   </tr>
   <tr>
    <th>Safari</th>
-   <td style="background: #eee;">N/A</td>
-   <td class="bc-supports-no">No (even with a <code>tabindex</code>) Safari 12 (<a href="https://bugs.webkit.org/show_bug.cgi?id=22261">bug 22261</a>)</td>
+   <td>N/A</td>
+   <td>❌ No (even with a <code>tabindex</code>) Safari 12 (<a href="https://bugs.webkit.org/show_bug.cgi?id=22261">bug 22261</a>)</td>
   </tr>
   <tr>
    <th>Internet Explorer</th>
-   <td class="bc-supports-yes">Yes - Internet Explorer 11</td>
-   <td style="background: #eee;">N/A</td>
+   <td>✅ Yes - Internet Explorer 11</td>
+   <td>N/A</td>
   </tr>
   <tr>
    <th>Presto</th>
-   <td class="bc-supports-yes">Yes - Opera 12</td>
-   <td class="bc-supports-yes">Yes - Opera 12</td>
+   <td>✅ Yes - Opera 12</td>
+   <td>✅ Yes - Opera 12</td>
   </tr>
  </tbody>
 </table>
@@ -249,13 +249,13 @@ browser-compat: html.elements.button
  <tbody>
   <tr>
    <th>Safari Mobile</th>
-   <td class="bc-supports-no">No (even with a <code>tabindex</code>)</td>
-   <td style="background-color: #eeeeee;">N/A</td>
+   <td>❌ No (even with a <code>tabindex</code>)</td>
+   <td>N/A</td>
   </tr>
   <tr>
    <th>Chrome 35</th>
-   <td class="bc-supports-no">No (even with a <code>tabindex</code>)</td>
-   <td class="bc-supports-yes">Yes</td>
+   <td>❌ No (even with a <code>tabindex</code>)</td>
+   <td>✅ Yes</td>
   </tr>
  </tbody>
 </table>
