--- a/files/en-us/web/html/element/index.html
+++ b/files/en-us/web/html/element/index.html
@@ -75,11 +75,11 @@ tags:
  </thead>
  <tbody>
   <tr>
-   <td style="vertical-align: top;">{{SVGElement("svg")}}</td>
+   <td>{{SVGElement("svg")}}</td>
    <td>The <code>svg</code> element is a container that defines a new coordinate system and <a href="/en-US/docs/Web/SVG/Attribute/viewBox">viewport</a>. It is used as the outermost element of SVG documents, but it can also be used to embed an SVG fragment inside an SVG or HTML document.</td>
   </tr>
   <tr>
-   <td style="vertical-align: top;">{{MathMLElement("math")}}</td>
+   <td>{{MathMLElement("math")}}</td>
    <td>The top-level element in MathML is <code>&lt;math&gt;</code>. Every valid MathML instance must be wrapped in <code>&lt;math&gt;</code> tags. In addition you must not nest a second <code>&lt;math&gt;</code> element in another, but you can have an arbitrary number of other child elements in it.</td>
   </tr>
  </tbody>
