--- a/files/en-us/web/html/element/input/date/index.html
+++ b/files/en-us/web/html/element/input/date/index.html
@@ -24,14 +24,6 @@ browser-compat: html.elements.input.input-date
 
 <p>The input UI generally varies from browser to browser; see {{anch("Browser compatibility")}} for further details. In unsupported browsers, the control degrades gracefully to <code><a href="/en-US/docs/Web/HTML/Element/input/text">&lt;input type="text"&gt;</a></code>.</p>
 
-<p>Among browsers with custom interfaces for selecting dates are Chrome, Edge, and Opera, whose date control looks like so:</p>
-
-<p><img alt="Chrome's date input as of November 2020" src="chrome-date-input.png" style="display: block; margin: 0 auto;"></p>
-
-<p>And the Firefox date control looks like this:</p>
-
-<p><img alt="Another “dd/mm/yyyy” textbox that expands into a selectable calendar control." src="firefox_datepicker.png" style="display: block; margin: 0 auto;"></p>
-
 <table class="properties">
  <tbody>
   <tr>
@@ -204,10 +196,6 @@ console.log(dateControl.valueAsNumber); // prints 1496275200000, a JavaScript ti
 
 <p>{{EmbedLiveSample('Validation', 600, 100)}}</p>
 
-<p>Here's a screenshot for those of you who aren't using a supporting browser:</p>
-
-<p><img alt="The input field has an overlaid speech balloon, with an orange exclamation mark icon and the message “Please fill in this field.”" src="date-picker-chrome-error-message.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
-
 <p>Here's the CSS used in the above example. We make use of the {{cssxref(":valid")}} and {{cssxref(":invalid")}} <a href="/en-US/docs/Web/CSS/Pseudo-elements">pseudo-elements</a> to add an icon next to the input, based on whether or not the current value is valid. We had to put the icon on a {{htmlelement("span")}} next to the input, not on the input itself, because in Chrome at least the input's generated content is placed inside the form control, and can't be styled or shown effectively.</p>
 
 <pre class="brush: css">label {
@@ -233,9 +221,7 @@ input:valid+span::after {
 
 <h2 id="Handling_browser_support">Handling browser support</h2>
 
-<p>As mentioned, the major problem with date inputs at the time of writing is {{anch("Browser compatibility", "browser support")}}. As an example, the date picker on Firefox for Android looks like this:</p>
-
-<p><img alt="A popup calendar picker modal floats above the web page and browser UI." src="date-picker-fxa.png" style="display: block; margin: 0 auto;"></p>
+<p>As mentioned, the major problem with date inputs is {{anch("Browser compatibility", "browser support")}}.</p>
 
 <p>Unsupporting browsers gracefully degrade to a text input, but this creates problems in consistency of user interface (the presented controls are different) and data handling.</p>
 
