--- a/files/en-us/web/html/element/input/search/index.html
+++ b/files/en-us/web/html/element/input/search/index.html
@@ -210,11 +210,11 @@ browser-compat: html.elements.input.input-search
 
 <p>The main basic differences come in the way browsers handle them. The first thing to note is that some browsers show a cross icon that can be clicked on to remove the search term instantly if desired. The following screenshot comes from Chrome:</p>
 
-<p><img alt="" src="chrome-cross-icon.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="chrome-cross-icon.png"></p>
 
 <p>In addition, modern browsers also tend to automatically store search terms previously entered across domains, which then come up as autocomplete options when subsequent searches are performed in search inputs on that domain. This helps users who tend to do searches on the same or similar search queries over time. This screenshot is from Firefox:</p>
 
-<p><img alt="" src="firefox-auto-complete.png" style="display: block; margin: 0px auto;">At this point, let's look at some useful techniques you can apply to your search forms.</p>
+<p><img alt="" src="firefox-auto-complete.png">At this point, let's look at some useful techniques you can apply to your search forms.</p>
 
 <h3 id="Setting_placeholders">Setting placeholders</h3>
 
@@ -343,7 +343,7 @@ input:valid ~ span:after {
 
 <p>In addition, if you try to submit the form with no search term entered into it, the browser will show a message. The following example is from Firefox:</p>
 
-<p><img alt="form field with attached message that says Please fill out this field" src="firefox-required-message.png" style="display: block; margin: 0 auto;"></p>
+<p><img alt="form field with attached message that says Please fill out this field" src="firefox-required-message.png"></p>
 
 <p>Different messages will be shown when you try to submit the form with different types of invalid data contained inside the inputs; see the below examples.</p>
 
