--- a/files/en-us/web/html/element/input/tel/index.html
+++ b/files/en-us/web/html/element/input/tel/index.html
@@ -263,7 +263,7 @@ browser-compat: html.elements.input.input-tel
 
 <p>Here's a screenshot of what that might look like:</p>
 
-<p><img alt="" src="phone-number-with-options.png" style="border-style: solid; border-width: 1px;"></p>
+<p><img alt="" src="phone-number-with-options.png"></p>
 
 <h2 id="Validation">Validation</h2>
 
