--- a/files/en-us/web/html/element/input/time/index.html
+++ b/files/en-us/web/html/element/input/time/index.html
@@ -45,9 +45,9 @@ browser-compat: html.elements.input.input-time
 
 <p>The Edge <code>time</code> control is somewhat more elaborate, opening up an hour and minute picker with sliding reels. It, like Chrome, uses a 12- or 24-hour format for inputting times, based on system locale:</p>
 
-<p><img alt="12-hour Edge time input" src="edge_time.png" style="display: block;"> 12-hour</p>
+<p><img alt="12-hour Edge time input" src="edge_time.png"> 12-hour</p>
 
-<p><img alt="24-hour Edge time input" src="edge-time.png" style="display: block;"> 24-hour</p>
+<p><img alt="24-hour Edge time input" src="edge-time.png"> 24-hour</p>
 
 <table class="properties">
  <tbody>
@@ -315,10 +315,6 @@ if (input.validity.valid &amp;&amp; input.type === 'time') {
 
 <p>{{ EmbedLiveSample('Making_times_required', 600, 120) }}</p>
 
-<p>Here's a screenshot for those of you who aren't using a browser that supports <code>time</code> inputs:</p>
-
-<p><img alt="" src="firefox-validation-message.png" style="display: block; margin: 0 auto;"></p>
-
 <div class="warning">
 <p><strong>Important</strong>: HTML form validation is <em>not</em> a substitute for scripts that ensure that the entered data is in the proper format. It's far too easy for someone to make adjustments to the HTML that allow them to bypass the validation, or to remove it entirely. It's also possible for someone to bypass your HTML entirely and submit the data directly to your server. If your server-side code fails to validate the data it receives, disaster could strike when improperly-formatted data is submitted (or data which is too large, of the wrong type, and so forth).</p>
 </div>
@@ -327,7 +323,7 @@ if (input.validity.valid &amp;&amp; input.type === 'time') {
 
 <p>As mentioned, older versions of Safari and a few other, less common, browsers don't support time inputs natively. In general, otherwise, support is good — especially on mobile platforms, which tend to have very nice user interfaces for specifying a time value. For example, the <code>time</code> picker on Chrome for Android looks like this:</p>
 
-<p><img alt="" src="chrome-android-time.png" style="display: block; margin: 0 auto;"></p>
+<p><img alt="" src="chrome-android-time.png"></p>
 
 <p>Browsers that don't support time inputs gracefully degrade to a text input, but this creates problems both in terms of consistency of user interface (the presented control will be different), and data handling.</p>
 
