--- a/files/en-us/web/html/global_attributes/accesskey/index.html
+++ b/files/en-us/web/html/global_attributes/accesskey/index.html
@@ -30,37 +30,37 @@ browser-compat: html.global_attributes.accesskey
   </tr>
   <tr>
    <th>Firefox</th>
-   <td colspan="2" style="text-align: center;"><kbd>Alt</kbd> + <kbd>Shift</kbd> + <kbd><em>key</em></kbd></td>
+   <td colspan="2"><kbd>Alt</kbd> + <kbd>Shift</kbd> + <kbd><em>key</em></kbd></td>
    <td>On Firefox 57 or newer: <kbd>Control</kbd> + <kbd>Option</kbd> + <kbd><em>key</em></kbd> or <kbd>Control</kbd> + <kbd>Alt</kbd> + <kbd><em>key</em></kbd><br>
     On Firefox 14 or newer: <kbd>Control</kbd> + <kbd>Alt</kbd> + <kbd><em>key</em></kbd><br>
     On Firefox 13 or older: <kbd>Control</kbd> + <kbd><em>key</em></kbd></td>
   </tr>
   <tr>
    <th>Internet Explorer</th>
-   <td rowspan="3" style="text-align: center;"><kbd>Alt</kbd> + <kbd><em>key</em></kbd><br>
+   <td rowspan="3"><kbd>Alt</kbd> + <kbd><em>key</em></kbd><br>
     <kbd>Alt</kbd> + <kbd>Shift</kbd> + <kbd><em>key</em></kbd></td>
-   <td colspan="2" style="text-align: center;">N/A</td>
+   <td colspan="2">N/A</td>
   </tr>
   <tr>
    <th>Edge</th>
-   <td style="text-align: center;">N/A</td>
-   <td rowspan="3" style="text-align: center;">
+   <td>N/A</td>
+   <td rowspan="3">
     <kbd>Control</kbd> + <kbd>Option</kbd> + <kbd><em>key</em></kbd><br>
     <kbd>Control</kbd> + <kbd>Option</kbd> + <kbd>Shift</kbd> + <kbd><em>key</em></kbd>
    </td>
   </tr>
   <tr>
    <th>Google Chrome</th>
-   <td style="text-align: center;"><kbd>Alt</kbd> + <kbd><em>key</em></kbd></td>
+   <td><kbd>Alt</kbd> + <kbd><em>key</em></kbd></td>
   </tr>
   <tr>
    <th>Safari</th>
-   <td colspan="2" style="text-align: center;">N/A</td>
+   <td colspan="2">N/A</td>
   </tr>
   <tr>
    <th>Opera 15+</th>
-   <td colspan="2" style="text-align: center;"><kbd>Alt</kbd> + <kbd><em>key</em></kbd></td>
-   <td style="text-align: center;"><kbd>Control</kbd> + <kbd>Alt</kbd> + <kbd><em>key</em></kbd></td>
+   <td colspan="2"><kbd>Alt</kbd> + <kbd><em>key</em></kbd></td>
+   <td><kbd>Control</kbd> + <kbd>Alt</kbd> + <kbd><em>key</em></kbd></td>
   </tr>
   <tr>
    <th>Opera 12</th>
