--- a/files/en-us/web/html/link_types/index.html
+++ b/files/en-us/web/html/link_types/index.html
@@ -19,7 +19,7 @@ browser-compat: html.elements.link.rel
   <tr>
    <th scope="col">Link Type</th>
    <th scope="col">Description</th>
-   <th scope="col" style="width: 12em;">Allowed in these elements</th>
+   <th scope="col">Allowed in these elements</th>
    <th scope="col">Not allowed in these elements</th>
   </tr>
  </thead>
@@ -118,7 +118,7 @@ browser-compat: html.elements.link.rel
     <div class="notecard note">
       <p><strong>Note:</strong> Apple's iOS does not use this link type, nor the {{HTMLAttrxRef("sizes","link")}} attribute, like others mobile browsers do, to select a webpage icon for Web Clip or a start-up placeholder. Instead it uses the non-standard <a class="external external-icon" href="https://developer.apple.com/library/content/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html#//apple_ref/doc/uid/TP40002051-CH3-SW4"><code>apple-touch-icon</code></a> and <a class="external external-icon" href="https://developer.apple.com/library/content/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html#//apple_ref/doc/uid/TP40002051-CH3-SW6"><code>apple-touch-startup-image</code></a> respectively.</p>
     </div>
-    
+
     <div class="notecard warning">
       <p><strong>Warning:</strong> The <code>shortcut</code> link type is often seen before <code>icon</code>, but this link type is non-conforming, ignored and <strong>web authors must not use it anymore</strong>.</p>
     </div>
