[Markdown] Remove seoSummary and summary classes from HTML docs (#8964)
* Remove seoSummary and summary classes from HTML docs

* Fix a typo

--- a/files/en-us/web/html/link_types/index.html
+++ b/files/en-us/web/html/link_types/index.html
@@ -11,7 +11,7 @@ browser-compat: html.elements.link.rel
 ---
 <div>{{HTMLSidebar}}</div>
 
-<p><span class="seoSummary">In HTML, link types indicate the relationship between two documents, in which one links to the other using an {{HTMLElement("a")}}, {{HTMLElement("area")}}, {{HTMLElement("form")}}, or {{HTMLElement("link")}} element.</span></p>
+<p>In HTML, link types indicate the relationship between two documents, in which one links to the other using an {{HTMLElement("a")}}, {{HTMLElement("area")}}, {{HTMLElement("form")}}, or {{HTMLElement("link")}} element.</p>
 
 <table class="standard-table">
  <caption>List of the defined link types and their significance in HTML</caption>
