--- a/files/en-us/web/html/attributes/rel/index.html
+++ b/files/en-us/web/html/attributes/rel/index.html
@@ -329,7 +329,7 @@ tags:
 <h3 id="Non-standard_values">Non-standard values</h3>
 
 <dl>
-	<dt>apple-touch-icon</dt>
+	<dt>{{htmlattrdef("apple-touch-icon")}}</dt>
 	<dd>Specifies the icon for a web application on an iOS device.</dd>
 </dl>
 
