[Markdown] Fix unconvertible <dl> elements in HTML (#8963)
* Fix unconvertible <dl> elements in HTML

* Update files/en-us/web/html/element/area/index.html

Co-authored-by: Jean-Yves Perrier <jypenator@gmail.com>

* Update files/en-us/web/html/attributes/rel/index.html

Co-authored-by: Jean-Yves Perrier <jypenator@gmail.com>

Co-authored-by: Jean-Yves Perrier <jypenator@gmail.com>

--- a/files/en-us/web/html/attributes/rel/index.html
+++ b/files/en-us/web/html/attributes/rel/index.html
@@ -329,19 +329,8 @@ tags:
 <h3 id="Non-standard_values">Non-standard values</h3>
 
 <dl>
-	<dt>apple-touch-icon-precomposed</dt>
-	<dd>
-	<pre class="brush: html"> &lt;!-- third-generation iPad with high-resolution Retina display: --&gt;
-  &lt;link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/img/favicon144.e7e21ca263ca.png"&gt;
-  &lt;!-- iPhone with high-resolution Retina display: --&gt;
-  &lt;link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/img/favicon114.d526f38b09c5.png"&gt;
-  &lt;!-- first- and second-generation iPad: --&gt;
-  &lt;link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/img/favicon72.cc65d1d762a0.png"&gt;
-  &lt;!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: --&gt;
-  &lt;link rel="apple-touch-icon-precomposed" href="/static/img/favicon57.de33179910ae.png"&gt;
-  &lt;!-- basic favicon --&gt;
-  &lt;link rel="icon" href="/static/img/favicon32.7f3da72dcea1.png"&gt;</pre>
-	</dd>
+	<dt>{{htmlattrdef("apple-touch-icon")}}</dt>
+	<dd>Specifies the icon for a web application on an iOS device.</dd>
 </dl>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
