--- a/files/en-us/web/html/element/a/index.html
+++ b/files/en-us/web/html/element/a/index.html
@@ -29,8 +29,7 @@ browser-compat: html.elements.a
 
 <dl>
  <dt id="download">{{HTMLAttrDef("download")}}</dt>
- <dd>Prompts the user to save the linked URL instead of navigating to it. Can be used with or without a value:</dd>
- <dd>
+ <dd><p>Prompts the user to save the linked URL instead of navigating to it. Can be used with or without a value:</p>
  <ul>
   <li>Without a value, the browser will suggest a filename/extension, generated from various sources:
    <ul>
