--- a/files/en-us/web/html/element/img/index.html
+++ b/files/en-us/web/html/element/img/index.html
@@ -122,8 +122,6 @@ browser-compat: html.elements.img
 	<dt>{{htmlattrdef("decoding")}}</dt>
 	<dd>
 	<p>Provides an image decoding hint to the browser. Allowed values:</p>
-	</dd>
-	<dd>
 	<dl>
 		<dt><code>sync</code></dt>
 		<dd>Decode the image synchronously, for atomic presentation with other content.</dd>
@@ -215,8 +213,7 @@ browser-compat: html.elements.img
 
 <dl>
 	<dt>{{htmlattrdef("align")}} {{deprecated_inline}}</dt>
-	<dd>Aligns the image with its surrounding context. Use the {{cssxref('float')}} and/or {{cssxref('vertical-align')}} {{glossary("CSS")}} properties instead of this attribute. Allowed values:</dd>
-	<dd>
+	<dd>Aligns the image with its surrounding context. Use the {{cssxref('float')}} and/or {{cssxref('vertical-align')}} {{glossary("CSS")}} properties instead of this attribute. Allowed values:
 	<dl>
 		<dt><code>top</code></dt>
 		<dd>Equivalent to <code>vertical-align: top</code> or <code>vertical-align: text-top</code></dd>
